# KapoorLabs-Lightning

./: .gitignore  .pre-commit-config.yaml  README.md  README_CARE.md  README_CELLFATE.md  README_INCEPTION.md  README_ONEAT.md  pyproject.toml  setup.cfg  tox.ini  update_version.py
.github/workflows/: deploy.yml  test_and_deploy.yml
apps/: README.md  demo_predict.py  run_job.sh
apps/huggingface/: README.md  app.py  requirements.txt
apps/streamlit/: app.py  backup_usage_log.py  demo_predict.py  local_app.py  remote_app.py  run_job.sh  submit_heavy_job.sh  submit_job.sh  usage_report.py
licenses/: BSD-3  MIT
plugins/: README.md  __init__.py  example_usage.py  inception_cellfate_visualizer.py  napari.yaml  oneat_event_visualizer.py  setup.py
scripts/: clean_checkpoints.py  rename_oneat_files.py
scripts/conf/: scenario_compute_accuracy.yaml  scenario_generate_care.yaml  scenario_generate_cellfate.yaml  scenario_generate_oneat.yaml  scenario_generate_oneat_spheroids.yaml  scenario_generate_roi.yaml  scenario_master_tracking.yaml  scenario_predict_care.yaml  scenario_predict_cellfate.yaml  scenario_predict_cellfate_inception.yaml  scenario_predict_oneat.yaml  scenario_predict_roi.yaml  scenario_train_care.yaml  scenario_train_oneat.yaml  scenario_train_oneat_combined.yaml
scripts/model_prediction/: _arch_loader.py  compute_accuracy.py  compute_cellfate_accuracy.py  compute_val_accuracy.py  lightning-predict-oneat.py  predict-care.py  predict-cellfate.py  predict-oneat.py  predict-roi.py  scenario_compute_accuracy.py  scenario_predict_care.py  (+6 more)
(+143 files in other folders)
